# mcp-license-header-guardian

./: README.md  pyproject.toml
src/mcp_license_header_guardian/: server.py
tests/: conftest.py  test_determinism.py
