[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-license-header-guardian"
version = "0.1.1"
description = "Deterministic, network-free, read-only MCP guardian that enforces license headers in tracked Python files (Tier 1)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Curtis D. Williams" }]
dependencies = ["fastmcp>=2.0.0"]

[project.scripts]
mcp-license-header-guardian = "mcp_license_header_guardian.server:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
